--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,10 @@
 [package]
 name = "blend-converter"
+description = "Convert blend files to other 3D formats"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+repository = "https://github.com/RuairidhWilliamson/blend_converter"
 
 [dependencies]
 thiserror = "1"
